--- a/portfolio.html
+++ b/portfolio.html
@@ -366,6 +366,19 @@
               </li>
             </ul>
           </div>
+          <form class="mailing-margin">
+            <b class="mailing">Подпишитесь на рассылку</b>
+            <div class="mailing-flex">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="mailing-form"
+              />
+
+              <button type="submit" class="button-mailing">Подписаться</button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
