--- a/index.html
+++ b/index.html
@@ -536,17 +536,25 @@
           <form class="modal-form">
             <div class="field-form">
               <label for="name">Имя</label>
-
               <input type="text" name="text" id="name" class="border-form" />
+              <svg class="name-form" width="12" height="12">
+                <use href="./svgoptimized/sprite.svg#icon-name-form"></use>
+              </svg>
             </div>
 
             <div class="field-form">
               <label for="tel">Телефон</label>
+              <svg class="name-form" width="13" height="13">
+                <use href="./svgoptimized/sprite.svg#icon-phone-form"></use>
+              </svg>
               <input type="tel" name="tel" id="tel" class="border-form" />
             </div>
 
             <div class="field-form">
               <label for="email">Почта</label>
+              <svg class="name-form" width="15" height="12">
+                <use href="./svgoptimized/sprite.svg#icon-mail-form"></use>
+              </svg>
               <input type="email" name="email" id="email" class="border-form" />
             </div>
 
@@ -555,17 +563,22 @@
               <textarea
                 name="comments"
                 id="comments"
-                rows="3"
+                rows="6"
                 placeholder="Введите текст"
-                class="border-form"
               ></textarea>
             </div>
           </form>
         </div>
         <div class="agreement-box">
-          <input type="checkbox" name="agreement" id="agreement" />
-          <label for="agreement"
-            >Соглашаюсь с рассылкой и принимаю Условия договора</label
+          <input
+            type="checkbox"
+            name="agreement"
+            class="checkbox"
+            id="checkbox"
+          />
+          <label for="checkbox" class="check-mark">
+            Соглашаюсь с рассылкой и принимаю
+            <a class="agreement-body">Условия договора</a></label
           >
         </div>
         <div class="button-container">
@@ -573,7 +586,7 @@
         </div>
 
         <button class="modal-close" data-modal-close>
-          <svg class="" width="18" height="18">
+          <svg class="close-color" width="18" height="18">
             <use
               href="./svgoptimized/sprite.svg#icon-close-black-18dp-2-1"
             ></use>
