--- a/portfolio.html
+++ b/portfolio.html
@@ -331,7 +331,7 @@
             </ul>
           </div>
 
-          <div>
+          <div class="join">
             <p class="footer-join">присоединяйтесь</p>
             <ul class="join-list">
               <li class="join-margin">
@@ -366,7 +366,7 @@
               </li>
             </ul>
           </div>
-          <form class="mailing-margin">
+          <form class="mailing-main">
             <b class="mailing">Подпишитесь на рассылку</b>
             <div class="mailing-flex">
               <input
@@ -376,7 +376,12 @@
                 class="mailing-form"
               />
 
-              <button type="submit" class="button-mailing">Подписаться</button>
+              <button type="submit" class="button-mailing">
+                Подписаться
+                <svg class="icon-mailing" width="24" height="24">
+                  <use href="./svgoptimized/sprite.svg#icon-icon-send"></use>
+                </svg>
+              </button>
             </div>
           </form>
         </div>
